fix: Font too large on mobile

--- a/src/niall-paterson/partials/_variables.scss
+++ b/src/niall-paterson/partials/_variables.scss
@@ -1,9 +1,9 @@
 $multiple: 8;
 
 $icon-font: 4px * $multiple;
-$small-font: 0.15em * $multiple;
-$medium-font: 0.25em * $multiple;
-$large-font: 0.35em * $multiple;
+$small-font: 0.125em * $multiple;
+$medium-font: 0.2em * $multiple;
+$large-font: 0.3em * $multiple;
 
 $tiny-margin: 1px * $multiple;
 $small-margin: 3px * $multiple;
